// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component Should render the Section component 1`] = `
<main
  className="o-main "
>
  <section
    className="c-section c-section--section test"
    id="section"
  >
    <div
      className="o-shell"
    >
      <SectionElements
        className=" test"
        hasButton={true}
        hasShell={true}
        id="section"
      >
        <Children />
      </SectionElements>
    </div>
  </section>
</main>
`;

exports[`Section component Should render the Section component without a button 1`] = `
<main
  className="o-main "
>
  <section
    className="c-section c-section--section"
    id="section"
  >
    <div
      className="o-shell o-shell--flex"
    >
      <SectionElements
        hasButton={false}
        hasShell={true}
        id="section"
        shellClass="o-shell--flex"
      >
        <Children />
      </SectionElements>
    </div>
  </section>
</main>
`;

exports[`Section component Should render the Section component without a button and a shell 1`] = `
<main
  className="o-main "
>
  <section
    className="c-section c-section--section test"
    id="section"
  >
    <SectionElements
      className=" test"
      hasButton={false}
      hasShell={false}
      id="section"
    >
      <Children />
    </SectionElements>
  </section>
</main>
`;

exports[`Section component Should render the Section component without a shell 1`] = `
<main
  className="o-main "
>
  <section
    className="c-section c-section--section test"
    id="section"
  >
    <SectionElements
      className=" test"
      hasButton={true}
      hasShell={false}
      id="section"
    >
      <Children />
    </SectionElements>
  </section>
</main>
`;

exports[`SectionElements component Should render the SectionElements component 1`] = `
<Fragment>
  <Children />
  <div
    className="c-section__actions"
  >
    <Button
      onClick={[Function]}
      type="button"
    >
      Get in touch
    </Button>
    <ul
      className="c-section__actions-list"
    >
      <li>
        <Button
          className="c-section__actions-close"
          onClick={[Function]}
          type="button"
        >
          Close
        </Button>
      </li>
      <li>
        <Button
          onClick={[Function]}
          type="button"
        >
          <Icon
            className="c-section__actions-icon"
            name="svg-email"
          />
          <span>
            Contact me
          </span>
          <strong>
            directly
          </strong>
        </Button>
      </li>
      <li>
        <ExternalLink
          className="c-btn"
          href="https://app.usebraintrust.com/talent/782/"
          onClick={[Function]}
        >
          <Icon
            className="c-section__actions-icon"
            name="svg-braintrust"
          />
          <span>
            Hire me on
          </span>
          <strong>
            Braintrust
          </strong>
        </ExternalLink>
      </li>
      <li>
        <ExternalLink
          className="c-btn"
          href="https://www.toptal.com/resume/atanas-atanasov"
          onClick={[Function]}
        >
          <Icon
            className="c-section__actions-icon"
            name="svg-toptal"
          />
          <span>
            Hire me on
          </span>
          <strong>
            Toptal
          </strong>
        </ExternalLink>
      </li>
    </ul>
  </div>
</Fragment>
`;

exports[`SectionElements component Should render the SectionElements component without a button 1`] = `
<Fragment>
  <Children />
</Fragment>
`;

exports[`SectionElements component Should render the SectionElements component without a button and a shell 1`] = `
<Fragment>
  <Children />
</Fragment>
`;

exports[`SectionElements component Should render the SectionElements component without a shell 1`] = `
<Fragment>
  <Children />
  <div
    className="c-section__actions"
  >
    <Button
      onClick={[Function]}
      type="button"
    >
      Get in touch
    </Button>
    <ul
      className="c-section__actions-list"
    >
      <li>
        <Button
          className="c-section__actions-close"
          onClick={[Function]}
          type="button"
        >
          Close
        </Button>
      </li>
      <li>
        <Button
          onClick={[Function]}
          type="button"
        >
          <Icon
            className="c-section__actions-icon"
            name="svg-email"
          />
          <span>
            Contact me
          </span>
          <strong>
            directly
          </strong>
        </Button>
      </li>
      <li>
        <ExternalLink
          className="c-btn"
          href="https://app.usebraintrust.com/talent/782/"
          onClick={[Function]}
        >
          <Icon
            className="c-section__actions-icon"
            name="svg-braintrust"
          />
          <span>
            Hire me on
          </span>
          <strong>
            Braintrust
          </strong>
        </ExternalLink>
      </li>
      <li>
        <ExternalLink
          className="c-btn"
          href="https://www.toptal.com/resume/atanas-atanasov"
          onClick={[Function]}
        >
          <Icon
            className="c-section__actions-icon"
            name="svg-toptal"
          />
          <span>
            Hire me on
          </span>
          <strong>
            Toptal
          </strong>
        </ExternalLink>
      </li>
    </ul>
  </div>
</Fragment>
`;
